um pouco mais de layout

--- a/listadequiz.html
+++ b/listadequiz.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <div class="topo">
+    <a href="listadequiz.html"><div class="topo">
         BuzzQuizz
-    </div>
+    </div></a> 
     <div></div>
     <div class="Seus">
         <div class="titulo">
             <h1>Seus Quizzes</h1>
-            <ion-icon class="icon" name="add-circle"></ion-icon>
+            <a href="criarquiz.html"><ion-icon class="icon" name="add-circle"></ion-icon></a>
         </div>
         <div class="conteudo">
             <div class="quiz-01">
