--- a/paginadoquiz.html
+++ b/paginadoquiz.html
@@ -19,13 +19,14 @@
         <div class="pergunta">
             <div class="textopergunta"><p>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</p></div>
             <div class="todasrespostas">
-                <div class="respostas"></div>
-                <div class="respostas"></div>
-                <div class="respostas"></div>
-                <div class="respostas"></div>
+                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>                
             </div>
         </div>
     </container>
     
 </body>
 </html>
+<!-- commit test-->
