--- a/paginadoquiz.html
+++ b/paginadoquiz.html
@@ -19,14 +19,16 @@
         <div class="pergunta">
             <div class="textopergunta"><p>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</p></div>
             <div class="todasrespostas">
+                <!-- 
                 <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
                 <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
                 <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
-                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>                
+                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
+                -->                
             </div>
         </div>
     </container>
-    
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="script2.js"></script> 
 </body>
 </html>
-<!-- commit test-->
