--- a/paginadoquiz.html
+++ b/paginadoquiz.html
@@ -15,8 +15,7 @@
         BuzzQuizz
     </div></a> 
     <container class="containerquiz">
-        <!-- 
-         
+    <!--
         <img class="mainimgquiz">
         <div class="pergunta">
             <div class="textopergunta"><p>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</p></div>
@@ -28,7 +27,19 @@
                 <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
                              
             </div>  
-        </div>--> 
+        </div>
+    -->
+    <!--
+        <div class="resultado">
+            <div class="tituloresultado"><p>88% de acerto: Você é praticamente um aluno de Hogwarts!</p></div>
+            <div class="resultado2">
+                <div class="imgresultado"></div>
+                <div class="mensagemresultado">Parabéns Potterhead! Bem-vindx a Hogwarts, aproveite o loop infinito de comida e clique no botão abaixo para usar o vira-tempo e reiniciar este teste.</div>
+            </div>
+        </div>
+        <div class="reiniciar"><p>Reiniciar Quizz</p></div>
+        <div class="voltarhome"><p>Voltar para home</p></div> 
+    -->
     </container>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script2.js"></script> 
