--- a/paginadoquiz.html
+++ b/paginadoquiz.html
@@ -21,10 +21,10 @@
             <div class="textopergunta"><p>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</p></div>
             <div class="todasrespostas">
                 
-                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
-                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
-                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
-                <div class="respostas"><img src="imgtest.png" width="330px" height="175px"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" class="imagemdasresp"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" class="imagemdasresp"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" class="imagemdasresp"><p class="textoresposta"> Gatíneo </p></div>
+                <div class="respostas"><img src="imgtest.png" class="imagemdasresp"><p class="textoresposta"> Gatíneo </p></div>
                              
             </div>  
         </div>
