Redirecionar para o quiz

--- a/listadequiz.html
+++ b/listadequiz.html
@@ -22,8 +22,8 @@
             <a href="criarquiz.html"><ion-icon class="icon" name="add-circle"></ion-icon></a>
         </div>
         <div class="conteudo">
-            <div class="quiz-01">
-                Acerte os personagens corretos dos Simpsons e prove seu amor!
+            <div class="quiz-01" onclick="redirecionar('2')">
+                Esse aqui. Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
             <div class="quiz-01">
                 Acerte os personagens corretos dos Simpsons e prove seu amor!
@@ -69,7 +69,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts.js"></script> 
+    <script src="script3.js"></script> 
     <script
     type="module"
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
