--- a/listadequiz.html
+++ b/listadequiz.html
@@ -25,8 +25,8 @@
             <div class="quiz-01" onclick="redirecionar('2')">
                 Esse aqui. Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
-            <div class="quiz-01">
-                Acerte os personagens corretos dos Simpsons e prove seu amor!
+            <div class="quiz-01" onclick="redirecionar('1')">
+                Esse tb.Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
             <div class="quiz-01">
                 Acerte os personagens corretos dos Simpsons e prove seu amor!
@@ -38,7 +38,8 @@
         <div class="titulo">
             Todos os Quizzes
         </div>
-        <div class="conteudo">
+        <div class="conteudo quizesserver">
+            <!--
             <div class="quiz-01">
                 Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
@@ -66,10 +67,10 @@
             <div class="quiz-01">
                 Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
+            -->
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script3.js"></script> 
     <script
     type="module"
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -78,5 +79,6 @@
     nomodule
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
   ></script>
+ <script src="script3.js"></script> 
 </body>
 </html>
