Carregar meus quizes

--- a/listadequiz.html
+++ b/listadequiz.html
@@ -21,8 +21,9 @@
             <h1>Seus Quizzes</h1>
             <a href="criarquiz.html"><ion-icon class="icon" name="add-circle"></ion-icon></a>
         </div>
-        <div class="conteudo">
-            <div class="quiz-01" onclick="redirecionar('2')">
+        <div class="conteudo meusquizes">
+           <!-- 
+           <div class="quiz-01" onclick="redirecionar('2')">
                 Esse aqui. Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
             <div class="quiz-01" onclick="redirecionar('1')">
@@ -31,7 +32,7 @@
             <div class="quiz-01">
                 Acerte os personagens corretos dos Simpsons e prove seu amor!
             </div>
-           
+           -->
         </div>
     </div>
     <div class="todos">
