--- a/criarquiz.html
+++ b/criarquiz.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <a href="listadequiz.html"><div class="topo">
+    <a href="index.html"><div class="topo">
         BuzzQuizz
     </div></a> 
    <div class="criar-inicio exibir">
