--- a/paginadoquiz.html
+++ b/paginadoquiz.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">  
 </head>
 <body>
-    <a href="listadequiz.html"><div class="topo">
+    <a href="index.html"><div class="topo">
         BuzzQuizz
     </div></a> 
     <container class="containerquiz">
